# wasm-resources

./: Cargo.toml  index.html  readme.md
.github/workflows/: deploy.yml
pkg/: package.json  wasm_resources.d.ts  wasm_resources.js  wasm_resources_bg.wasm  wasm_resources_bg.wasm.d.ts
res/: data.json  wasm-tree.txt
src/: lib.rs  main.rs
