[package]
name = "wasm-resources"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1"
cfg-if = "1"
lazy_static = "1"
log = "0.4"
pollster = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = "0.11"
wasm-bindgen = "0.2"
# Needed for async wasm_bindgen(start)
wasm-bindgen-futures = "0.4"
# These are only to make debugging easier
console_error_panic_hook = "0.1"
console_log = "0.2"